Fix the UI items spacing for mobiles

--- a/src/index.css
+++ b/src/index.css
@@ -157,16 +157,19 @@ body {
 }
 
 .menu_close {
-  font-size: 25px;
+  font-size: 1.5em;
   position: absolute;
-  right: 17px;
-  top: 13px;
+  right: 1em;
+  top: 1em;
   color: var(--white);
   background-color: var(--clr-second);
   transition: width 100ms ease-in-out;
   padding: 5px 10px;
   border-radius: 20px;
-  font-weight: 900;
+  font-weight: 700;
+  display: flex;
+  flex-direction: center;
+  align-items: center;
   cursor: pointer;
 }
 
@@ -256,7 +259,7 @@ body {
 
 /* Main Section */
 .prev-next-btn {
-  margin: 100px 10px;
+  margin: 1em 1em 5em;
   display: flex;
   justify-content: space-around;
   align-items: center;
@@ -272,14 +275,14 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
-  margin: 2em 0;
+  margin: 2em 0 0;
   width: 100%;
 }
 
 .movie-list {
   display: flex;
   flex-direction: column;
-  margin: 2em 0;
+  margin: 3em 0;
   gap: 1em;
 }
 
@@ -292,10 +295,14 @@ body {
   width: 80vw;
 }
 
+.movie + .movie {
+  margin-top: 1em;
+}
+
 .movie-popup {
   display: flex;
   flex-direction: column;
-  margin: 2em auto;
+  margin: 4em auto 0;
   width: 90%;
   height: 95vh;
   overflow: hidden;
@@ -669,6 +676,10 @@ body {
     padding: 0.75em;
     filter: brightness(1.2);
     width: initial;
+  }
+
+  .movie + .movie {
+    margin-top: initial;
   }
 
   .movie-popup {
